kubernetes/mysql/catitres-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catitres-mysql
  namespace: packapp09
spec:
  selector:
    matchLabels:
      app: catitres-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: catitres-mysql
    spec:
      containers:
      - name: catitres-mysql
        image: registry.hackathon-container.com/packapp09/catitres:1.0
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry
