kubernetes/mysql/catitres-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catitres-mysql-svc
  namespace: packapp09
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8999
    targetPort: 8080
    protocol: TCP
  selector:
    app: catitres-mysql
